@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-28T00:40:33Z",
-  "count_outdated" : 1525,
-  "uniques_outdated" : 81,
-  "count" : 1588,
+  "timestamp" : "2022-05-28T16:09:47Z",
+  "count_outdated" : 1529,
+  "uniques_outdated" : 82,
+  "count" : 1591,
   "uniques" : 90,
   "views" : [
-    {
-      "timestamp": "2022-05-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 4 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-16T00:00:00Z",
       "count": 5,
